src/assignment_4/y.output
Terminals which are not used

   ESCAPE_CONSTANT


Grammar

    0 $accept: program $end

    1 program: translation_unit

    2 translation_unit: external_declaration
    3                 | translation_unit external_declaration

    4 external_declaration: function_definition
    5                     | declaration

    6 function_definition: declaration_specifiers declarator compound_statement
    7                    | declarator compound_statement

    8 declaration: declaration_specifiers init_declarator_list_opt SEMICOLON

    9 init_declarator_list_opt: /* empty */
   10                         | init_declarator_list

   11 declaration_specifiers: type_specifier
   12                       | storage_class_specifier
   13                       | type_specifier declaration_specifiers
   14                       | storage_class_specifier declaration_specifiers

   15 storage_class_specifier: AUTO_SYM
   16                        | STATIC_SYM
   17                        | TYPEDEF_SYM

   18 init_declarator_list: init_declarator
   19                     | init_declarator_list COMMA init_declarator

   20 init_declarator: declarator
   21                | declarator ASSIGN initializer

   22 initializer: assignment_expression

   23 type_specifier: struct_specifier
   24               | enum_specifier
   25               | TYPE_IDENTIFIER

   26 struct_specifier: struct_or_union IDENTIFIER LR struct_declaration_list RR
   27                 | struct_or_union LR struct_declaration_list RR
   28                 | struct_or_union IDENTIFIER

   29 struct_or_union: STRUCT_SYM
   30                | UNION_SYM

   31 struct_declaration_list: struct_declaration
   32                        | struct_declaration_list struct_declaration

   33 struct_declaration: specifier_qualifier_list struct_declarator_list SEMICOLON

   34 specifier_qualifier_list: type_specifier
   35                         | type_specifier specifier_qualifier_list

   36 struct_declarator_list: struct_declarator
   37                       | struct_declarator_list COMMA struct_declarator

   38 struct_declarator: declarator
   39                  | COLON constant_expression
   40                  | declarator COLON constant_expression

   41 enum_specifier: ENUM_SYM IDENTIFIER LR enumerator_list RR
   42               | ENUM_SYM LR enumerator_list RR
   43               | ENUM_SYM IDENTIFIER

   44 enumerator_list: enumerator
   45                | enumerator_list COMMA enumerator

   46 enumerator: IDENTIFIER
   47           | IDENTIFIER ASSIGN constant_expression

   48 declarator: pointer direct_declarator
   49           | direct_declarator

   50 pointer: STAR
   51        | STAR pointer

   52 direct_declarator: IDENTIFIER
   53                  | LP declarator RP
   54                  | direct_declarator LB constant_expression_opt RB
   55                  | direct_declarator LP parameter_type_list_opt RP

   56 constant_expression_opt: /* empty */
   57                        | constant_expression

   58 parameter_type_list_opt: /* empty */
   59                        | parameter_type_list

   60 parameter_type_list: parameter_list
   61                    | parameter_list COMMA DOTDOTDOT

   62 parameter_list: parameter_declaration
   63               | parameter_list COMMA parameter_declaration

   64 parameter_declaration: declaration_specifiers declarator
   65                      | declaration_specifiers abstract_declarator_opt

   66 abstract_declarator_opt: /* empty */
   67                        | abstract_declarator

   68 abstract_declarator: pointer
   69                    | direct_abstract_declarator
   70                    | pointer direct_abstract_declarator

   71 direct_abstract_declarator: LP abstract_declarator RP
   72                           | LB constant_expression_opt RB
   73                           | LP parameter_type_list_opt RP
   74                           | direct_abstract_declarator LB constant_expression_opt RB
   75                           | direct_abstract_declarator LP parameter_type_list_opt RP

   76 statement: labeled_statement
   77          | compound_statement
   78          | expression_statement
   79          | selection_statement
   80          | iteration_statement
   81          | jump_statement

   82 labeled_statement: CASE_SYM constant_expression COLON statement
   83                  | DEFAULT_SYM COLON statement
   84                  | IDENTIFIER COLON statement

   85 compound_statement: LR declaration_list statement_list RR

   86 declaration_list: /* empty */
   87                 | declaration_list declaration

   88 statement_list: /* empty */
   89               | statement_list statement

   90 expression_statement: SEMICOLON
   91                     | expression SEMICOLON

   92 selection_statement: IF_SYM LP expression RP statement "then"
   93                    | IF_SYM LP expression RP statement ELSE_SYM statement
   94                    | SWITCH_SYM LP expression RP statement

   95 iteration_statement: WHILE_SYM LP expression RP statement
   96                    | DO_SYM statement WHILE_SYM LP expression RP SEMICOLON
   97                    | FOR_SYM LP expression_opt SEMICOLON expression_opt SEMICOLON expression_opt RP statement

   98 expression_opt: /* empty */
   99               | expression

  100 jump_statement: RETURN_SYM expression_opt SEMICOLON
  101               | CONTINUE_SYM SEMICOLON
  102               | BREAK_SYM SEMICOLON
  103               | GOTO_SYM IDENTIFIER SEMICOLON

  104 primary_expression: IDENTIFIER
  105                   | INTEGER_CONSTANT
  106                   | FLOAT_CONSTANT
  107                   | CHARACTER_CONSTANT
  108                   | STRING_LITERAL
  109                   | LP expression RP

  110 postfix_expression: primary_expression
  111                   | postfix_expression PLUSPLUS
  112                   | postfix_expression MINUSMINUS
  113                   | postfix_expression LB expression RB
  114                   | postfix_expression LP arg_expression_list_opt RP
  115                   | postfix_expression PERIOD IDENTIFIER
  116                   | postfix_expression ARROW IDENTIFIER

  117 arg_expression_list_opt: /* empty */
  118                        | arg_expression_list

  119 arg_expression_list: assignment_expression
  120                    | arg_expression_list COMMA assignment_expression

  121 unary_expression: postfix_expression
  122                 | PLUSPLUS unary_expression
  123                 | MINUSMINUS unary_expression
  124                 | AMP cast_expression
  125                 | STAR cast_expression
  126                 | EXCL cast_expression
  127                 | MINUS cast_expression
  128                 | PLUS cast_expression
  129                 | SIZEOF_SYM unary_expression
  130                 | SIZEOF_SYM LP type_name RP

  131 cast_expression: unary_expression
  132                | LP type_name RP cast_expression

  133 type_name: declaration_specifiers
  134          | declaration_specifiers abstract_declarator

  135 multiplicative_expression: cast_expression
  136                          | multiplicative_expression STAR cast_expression
  137                          | multiplicative_expression SLASH cast_expression
  138                          | multiplicative_expression PERCENT cast_expression

  139 additive_expression: multiplicative_expression
  140                    | additive_expression PLUS multiplicative_expression
  141                    | additive_expression MINUS multiplicative_expression

  142 shift_expression: additive_expression

  143 relational_expression: shift_expression
  144                      | relational_expression LSS shift_expression
  145                      | relational_expression GTR shift_expression
  146                      | relational_expression LEQ shift_expression
  147                      | relational_expression GEQ shift_expression

  148 equality_expression: relational_expression
  149                    | equality_expression EQL relational_expression
  150                    | equality_expression NEQ relational_expression

  151 AND_expression: equality_expression
  152               | AND_expression AMP equality_expression

  153 exclusive_OR_expression: AND_expression

  154 inclusive_OR_expression: exclusive_OR_expression

  155 logical_AND_expression: inclusive_OR_expression
  156                       | logical_AND_expression AMPAMP inclusive_OR_expression

  157 logical_OR_expression: logical_AND_expression
  158                      | logical_OR_expression BARBAR logical_AND_expression

  159 conditional_expression: logical_OR_expression

  160 assignment_expression: conditional_expression
  161                      | unary_expression ASSIGN assignment_expression

  162 comma_expression: assignment_expression

  163 expression: comma_expression

  164 constant_expression: assignment_expression


Terminals, with rules where they appear

$end (0) 0
error (256)
"then" (258) 92
ELSE_SYM (259) 93
GOTO_SYM (260) 103
AUTO_SYM (261) 15
BREAK_SYM (262) 102
CASE_SYM (263) 82
CONTINUE_SYM (264) 101
DEFAULT_SYM (265) 83
DO_SYM (266) 96
ENUM_SYM (267) 41 42 43
FOR_SYM (268) 97
IF_SYM (269) 92 93
RETURN_SYM (270) 100
SIZEOF_SYM (271) 129 130
STATIC_SYM (272) 16
STRUCT_SYM (273) 29
SWITCH_SYM (274) 94
TYPEDEF_SYM (275) 17
UNION_SYM (276) 30
WHILE_SYM (277) 95 96
PLUSPLUS (278) 111 122
MINUSMINUS (279) 112 123
ARROW (280) 116
LSS (281) 144
GTR (282) 145
LEQ (283) 146
GEQ (284) 147
EQL (285) 149
NEQ (286) 150
AMPAMP (287) 156
BARBAR (288) 158
DOTDOTDOT (289) 61
LP (290) 53 55 71 73 75 92 93 94 95 96 97 109 114 130 132
RP (291) 53 55 71 73 75 92 93 94 95 96 97 109 114 130 132
LB (292) 54 72 74 113
RB (293) 54 72 74 113
LR (294) 26 27 41 42 85
RR (295) 26 27 41 42 85
COLON (296) 39 40 82 83 84
PERIOD (297) 115
COMMA (298) 19 37 45 61 63 120
EXCL (299) 126
STAR (300) 50 51 125 136
SLASH (301) 137
PERCENT (302) 138
AMP (303) 124 152
SEMICOLON (304) 8 33 90 91 96 97 100 101 102 103
PLUS (305) 128 140
MINUS (306) 127 141
ASSIGN (307) 21 47 161
INTEGER_CONSTANT (308) 105
FLOAT_CONSTANT (309) 106
STRING_LITERAL (310) 108
CHARACTER_CONSTANT (311) 107
ESCAPE_CONSTANT (312)
IDENTIFIER (313) 26 28 41 43 46 47 52 84 103 104 115 116
TYPE_IDENTIFIER (314) 25


Nonterminals, with rules where they appear

$accept (60)
    on left: 0
program (61)
    on left: 1, on right: 0
translation_unit (62)
    on left: 2 3, on right: 1 3
external_declaration (63)
    on left: 4 5, on right: 2 3
function_definition (64)
    on left: 6 7, on right: 4
declaration (65)
    on left: 8, on right: 5 87
init_declarator_list_opt (66)
    on left: 9 10, on right: 8
declaration_specifiers (67)
    on left: 11 12 13 14, on right: 6 8 13 14 64 65 133 134
storage_class_specifier (68)
    on left: 15 16 17, on right: 12 14
init_declarator_list (69)
    on left: 18 19, on right: 10 19
init_declarator (70)
    on left: 20 21, on right: 18 19
initializer (71)
    on left: 22, on right: 21
type_specifier (72)
    on left: 23 24 25, on right: 11 13 34 35
struct_specifier (73)
    on left: 26 27 28, on right: 23
struct_or_union (74)
    on left: 29 30, on right: 26 27 28
struct_declaration_list (75)
    on left: 31 32, on right: 26 27 32
struct_declaration (76)
    on left: 33, on right: 31 32
specifier_qualifier_list (77)
    on left: 34 35, on right: 33 35
struct_declarator_list (78)
    on left: 36 37, on right: 33 37
struct_declarator (79)
    on left: 38 39 40, on right: 36 37
enum_specifier (80)
    on left: 41 42 43, on right: 24
enumerator_list (81)
    on left: 44 45, on right: 41 42 45
enumerator (82)
    on left: 46 47, on right: 44 45
declarator (83)
    on left: 48 49, on right: 6 7 20 21 38 40 53 64
pointer (84)
    on left: 50 51, on right: 48 51 68 70
direct_declarator (85)
    on left: 52 53 54 55, on right: 48 49 54 55
constant_expression_opt (86)
    on left: 56 57, on right: 54 72 74
parameter_type_list_opt (87)
    on left: 58 59, on right: 55 73 75
parameter_type_list (88)
    on left: 60 61, on right: 59
parameter_list (89)
    on left: 62 63, on right: 60 61 63
parameter_declaration (90)
    on left: 64 65, on right: 62 63
abstract_declarator_opt (91)
    on left: 66 67, on right: 65
abstract_declarator (92)
    on left: 68 69 70, on right: 67 71 134
direct_abstract_declarator (93)
    on left: 71 72 73 74 75, on right: 69 70 74 75
statement (94)
    on left: 76 77 78 79 80 81, on right: 82 83 84 89 92 93 94 95 96
    97
labeled_statement (95)
    on left: 82 83 84, on right: 76
compound_statement (96)
    on left: 85, on right: 6 7 77
declaration_list (97)
    on left: 86 87, on right: 85 87
statement_list (98)
    on left: 88 89, on right: 85 89
expression_statement (99)
    on left: 90 91, on right: 78
selection_statement (100)
    on left: 92 93 94, on right: 79
iteration_statement (101)
    on left: 95 96 97, on right: 80
expression_opt (102)
    on left: 98 99, on right: 97 100
jump_statement (103)
    on left: 100 101 102 103, on right: 81
primary_expression (104)
    on left: 104 105 106 107 108 109, on right: 110
postfix_expression (105)
    on left: 110 111 112 113 114 115 116, on right: 111 112 113 114
    115 116 121
arg_expression_list_opt (106)
    on left: 117 118, on right: 114
arg_expression_list (107)
    on left: 119 120, on right: 118 120
unary_expression (108)
    on left: 121 122 123 124 125 126 127 128 129 130,
    on right: 122 123 129 131 161
cast_expression (109)
    on left: 131 132, on right: 124 125 126 127 128 132 135 136 137
    138
type_name (110)
    on left: 133 134, on right: 130 132
multiplicative_expression (111)
    on left: 135 136 137 138, on right: 136 137 138 139 140 141
additive_expression (112)
    on left: 139 140 141, on right: 140 141 142
shift_expression (113)
    on left: 142, on right: 143 144 145 146 147
relational_expression (114)
    on left: 143 144 145 146 147, on right: 144 145 146 147 148 149
    150
equality_expression (115)
    on left: 148 149 150, on right: 149 150 151 152
AND_expression (116)
    on left: 151 152, on right: 152 153
exclusive_OR_expression (117)
    on left: 153, on right: 154
inclusive_OR_expression (118)
    on left: 154, on right: 155 156
logical_AND_expression (119)
    on left: 155 156, on right: 156 157 158
logical_OR_expression (120)
    on left: 157 158, on right: 158 159
conditional_expression (121)
    on left: 159, on right: 160
assignment_expression (122)
    on left: 160 161, on right: 22 119 120 161 162 164
comma_expression (123)
    on left: 162, on right: 163
expression (124)
    on left: 163, on right: 91 92 93 94 95 96 99 109 113
constant_expression (125)
    on left: 164, on right: 39 40 47 57 82


state 0

    0 $accept: . program $end

    AUTO_SYM         shift, and go to state 1
    ENUM_SYM         shift, and go to state 2
    STATIC_SYM       shift, and go to state 3
    STRUCT_SYM       shift, and go to state 4
    TYPEDEF_SYM      shift, and go to state 5
    UNION_SYM        shift, and go to state 6
    LP               shift, and go to state 7
    STAR             shift, and go to state 8
    IDENTIFIER       shift, and go to state 9
    TYPE_IDENTIFIER  shift, and go to state 10

    program                  go to state 11
    translation_unit         go to state 12
    external_declaration     go to state 13
    function_definition      go to state 14
    declaration              go to state 15
    declaration_specifiers   go to state 16
    storage_class_specifier  go to state 17
    type_specifier           go to state 18
    struct_specifier         go to state 19
    struct_or_union          go to state 20
    enum_specifier           go to state 21
    declarator               go to state 22
    pointer                  go to state 23
    direct_declarator        go to state 24


state 1

   15 storage_class_specifier: AUTO_SYM .

    $default  reduce using rule 15 (storage_class_specifier)


state 2

   41 enum_specifier: ENUM_SYM . IDENTIFIER LR enumerator_list RR
   42               | ENUM_SYM . LR enumerator_list RR
   43               | ENUM_SYM . IDENTIFIER

    LR          shift, and go to state 25
    IDENTIFIER  shift, and go to state 26


state 3

   16 storage_class_specifier: STATIC_SYM .

    $default  reduce using rule 16 (storage_class_specifier)


state 4

   29 struct_or_union: STRUCT_SYM .

    $default  reduce using rule 29 (struct_or_union)


state 5

   17 storage_class_specifier: TYPEDEF_SYM .

    $default  reduce using rule 17 (storage_class_specifier)


state 6

   30 struct_or_union: UNION_SYM .

    $default  reduce using rule 30 (struct_or_union)


state 7

   53 direct_declarator: LP . declarator RP

    LP          shift, and go to state 7
    STAR        shift, and go to state 8
    IDENTIFIER  shift, and go to state 9

    declarator         go to state 27
    pointer            go to state 23
    direct_declarator  go to state 24


state 8

   50 pointer: STAR .
   51        | STAR . pointer

    STAR  shift, and go to state 8

    $default  reduce using rule 50 (pointer)

    pointer  go to state 28


state 9

   52 direct_declarator: IDENTIFIER .

    $default  reduce using rule 52 (direct_declarator)


state 10

   25 type_specifier: TYPE_IDENTIFIER .

    $default  reduce using rule 25 (type_specifier)


state 11

    0 $accept: program . $end

    $end  shift, and go to state 29


state 12

    1 program: translation_unit .
    3 translation_unit: translation_unit . external_declaration

    AUTO_SYM         shift, and go to state 1
    ENUM_SYM         shift, and go to state 2
    STATIC_SYM       shift, and go to state 3
    STRUCT_SYM       shift, and go to state 4
    TYPEDEF_SYM      shift, and go to state 5
    UNION_SYM        shift, and go to state 6
    LP               shift, and go to state 7
    STAR             shift, and go to state 8
    IDENTIFIER       shift, and go to state 9
    TYPE_IDENTIFIER  shift, and go to state 10

    $default  reduce using rule 1 (program)

    external_declaration     go to state 30
    function_definition      go to state 14
    declaration              go to state 15
    declaration_specifiers   go to state 16
    storage_class_specifier  go to state 17
    type_specifier           go to state 18
    struct_specifier         go to state 19
    struct_or_union          go to state 20
    enum_specifier           go to state 21
    declarator               go to state 22
    pointer                  go to state 23
    direct_declarator        go to state 24


state 13

    2 translation_unit: external_declaration .

    $default  reduce using rule 2 (translation_unit)


state 14

    4 external_declaration: function_definition .

    $default  reduce using rule 4 (external_declaration)


state 15

    5 external_declaration: declaration .

    $default  reduce using rule 5 (external_declaration)


state 16

    6 function_definition: declaration_specifiers . declarator compound_statement
    8 declaration: declaration_specifiers . init_declarator_list_opt SEMICOLON

    LP          shift, and go to state 7
    STAR        shift, and go to state 8
    IDENTIFIER  shift, and go to state 9

    $default  reduce using rule 9 (init_declarator_list_opt)

    init_declarator_list_opt  go to state 31
    init_declarator_list      go to state 32
    init_declarator           go to state 33
    declarator                go to state 34
    pointer                   go to state 23
    direct_declarator         go to state 24


state 17

   12 declaration_specifiers: storage_class_specifier .
   14                       | storage_class_specifier . declaration_specifiers

    AUTO_SYM         shift, and go to state 1
    ENUM_SYM         shift, and go to state 2
    STATIC_SYM       shift, and go to state 3
    STRUCT_SYM       shift, and go to state 4
    TYPEDEF_SYM      shift, and go to state 5
    UNION_SYM        shift, and go to state 6
    TYPE_IDENTIFIER  shift, and go to state 10

    $default  reduce using rule 12 (declaration_specifiers)

    declaration_specifiers   go to state 35
    storage_class_specifier  go to state 17
    type_specifier           go to state 18
    struct_specifier         go to state 19
    struct_or_union          go to state 20
    enum_specifier           go to state 21


state 18

   11 declaration_specifiers: type_specifier .
   13                       | type_specifier . declaration_specifiers

    AUTO_SYM         shift, and go to state 1
    ENUM_SYM         shift, and go to state 2
    STATIC_SYM       shift, and go to state 3
    STRUCT_SYM       shift, and go to state 4
    TYPEDEF_SYM      shift, and go to state 5
    UNION_SYM        shift, and go to state 6
    TYPE_IDENTIFIER  shift, and go to state 10

    $default  reduce using rule 11 (declaration_specifiers)

    declaration_specifiers   go to state 36
    storage_class_specifier  go to state 17
    type_specifier           go to state 18
    struct_specifier         go to state 19
    struct_or_union          go to state 20
    enum_specifier           go to state 21


state 19

   23 type_specifier: struct_specifier .

    $default  reduce using rule 23 (type_specifier)


state 20

   26 struct_specifier: struct_or_union . IDENTIFIER LR struct_declaration_list RR
   27                 | struct_or_union . LR struct_declaration_list RR
   28                 | struct_or_union . IDENTIFIER

    LR          shift, and go to state 37
    IDENTIFIER  shift, and go to state 38


state 21

   24 type_specifier: enum_specifier .

    $default  reduce using rule 24 (type_specifier)


state 22

    7 function_definition: declarator . compound_statement

    LR  shift, and go to state 39

    compound_statement  go to state 40


state 23

   48 declarator: pointer . direct_declarator

    LP          shift, and go to state 7
    IDENTIFIER  shift, and go to state 9

    direct_declarator  go to state 41


state 24

   49 declarator: direct_declarator .
   54 direct_declarator: direct_declarator . LB constant_expression_opt RB
   55                  | direct_declarator . LP parameter_type_list_opt RP

    LP  shift, and go to state 42
    LB  shift, and go to state 43

    $default  reduce using rule 49 (declarator)


state 25

   42 enum_specifier: ENUM_SYM LR . enumerator_list RR

    IDENTIFIER  shift, and go to state 44

    enumerator_list  go to state 45
    enumerator       go to state 46


state 26

   41 enum_specifier: ENUM_SYM IDENTIFIER . LR enumerator_list RR
   43               | ENUM_SYM IDENTIFIER .

    LR  shift, and go to state 47

    $default  reduce using rule 43 (enum_specifier)


state 27

   53 direct_declarator: LP declarator . RP

    RP  shift, and go to state 48


state 28

   51 pointer: STAR pointer .

    $default  reduce using rule 51 (pointer)


state 29

    0 $accept: program $end .

    $default  accept


state 30

    3 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 3 (translation_unit)


state 31

    8 declaration: declaration_specifiers init_declarator_list_opt . SEMICOLON

    SEMICOLON  shift, and go to state 49


state 32

   10 init_declarator_list_opt: init_declarator_list .
   19 init_declarator_list: init_declarator_list . COMMA init_declarator

    COMMA  shift, and go to state 50

    $default  reduce using rule 10 (init_declarator_list_opt)


state 33

   18 init_declarator_list: init_declarator .

    $default  reduce using rule 18 (init_declarator_list)


state 34

    6 function_definition: declaration_specifiers declarator . compound_statement
   20 init_declarator: declarator .
   21                | declarator . ASSIGN initializer

    LR      shift, and go to state 39
    ASSIGN  shift, and go to state 51

    $default  reduce using rule 20 (init_declarator)

    compound_statement  go to state 52


state 35

   14 declaration_specifiers: storage_class_specifier declaration_specifiers .

    $default  reduce using rule 14 (declaration_specifiers)


state 36

   13 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 13 (declaration_specifiers)


state 37

   27 struct_specifier: struct_or_union LR . struct_declaration_list RR

    ENUM_SYM         shift, and go to state 2
    STRUCT_SYM       shift, and go to state 4
    UNION_SYM        shift, and go to state 6
    TYPE_IDENTIFIER  shift, and go to state 10

    type_specifier            go to state 53
    struct_specifier          go to state 19
    struct_or_union           go to state 20
    struct_declaration_list   go to state 54
    struct_declaration        go to state 55
    specifier_qualifier_list  go to state 56
    enum_specifier            go to state 21


state 38

   26 struct_specifier: struct_or_union IDENTIFIER . LR struct_declaration_list RR
   28                 | struct_or_union IDENTIFIER .

    LR  shift, and go to state 57

    $default  reduce using rule 28 (struct_specifier)


state 39

   85 compound_statement: LR . declaration_list statement_list RR

    $default  reduce using rule 86 (declaration_list)

    declaration_list  go to state 58


state 40

    7 function_definition: declarator compound_statement .

    $default  reduce using rule 7 (function_definition)


state 41

   48 declarator: pointer direct_declarator .
   54 direct_declarator: direct_declarator . LB constant_expression_opt RB
   55                  | direct_declarator . LP parameter_type_list_opt RP

    LP  shift, and go to state 42
    LB  shift, and go to state 43

    $default  reduce using rule 48 (declarator)


state 42

   55 direct_declarator: direct_declarator LP . parameter_type_list_opt RP

    AUTO_SYM         shift, and go to state 1
    ENUM_SYM         shift, and go to state 2
    STATIC_SYM       shift, and go to state 3
    STRUCT_SYM       shift, and go to state 4
    TYPEDEF_SYM      shift, and go to state 5
    UNION_SYM        shift, and go to state 6
    TYPE_IDENTIFIER  shift, and go to state 10

    $default  reduce using rule 58 (parameter_type_list_opt)

    declaration_specifiers   go to state 59
    storage_class_specifier  go to state 17
    type_specifier           go to state 18
    struct_specifier         go to state 19
    struct_or_union          go to state 20
    enum_specifier           go to state 21
    parameter_type_list_opt  go to state 60
    parameter_type_list      go to state 61
    parameter_list           go to state 62
    parameter_declaration    go to state 63


state 43

   54 direct_declarator: direct_declarator LB . constant_expression_opt RB

    SIZEOF_SYM          shift, and go to state 64
    PLUSPLUS            shift, and go to state 65
    MINUSMINUS          shift, and go to state 66
    LP                  shift, and go to state 67
    EXCL                shift, and go to state 68
    STAR                shift, and go to state 69
    AMP                 shift, and go to state 70
    PLUS                shift, and go to state 71
    MINUS               shift, and go to state 72
    INTEGER_CONSTANT    shift, and go to state 73
    FLOAT_CONSTANT      shift, and go to state 74
    STRING_LITERAL      shift, and go to state 75
    CHARACTER_CONSTANT  shift, and go to state 76
    IDENTIFIER          shift, and go to state 77

    $default  reduce using rule 56 (constant_expression_opt)
